--- a/Aula 04 - Interfaces, Generics, Código Assíncrono e Operador Keyof/tsconfig.json
+++ b/Aula 04 - Interfaces, Generics, Código Assíncrono e Operador Keyof/tsconfig.json
@@ -3,6 +3,8 @@
   "_version": "24.0.0",
 
   "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
     "lib": [
       "es2024",
       "ESNext.Array",
